# Sheriff

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ARCHITECTURE_CLI.md  BAM_FETCH_OPTIMIZATION_REPORT.md  BAM_OPTIMIZATION_DEEP_DIVE.md  BAM_OPTIMIZATION_IMPLEMENTATION_PLAN.md  BAM_OPTIMIZATION_QUICK_START.md  BAM_OPTIMIZATION_START_HERE.md  BAM_OPTIMIZATION_VISUAL_REFERENCE.md  BAM_RESEARCH_EXECUTIVE_SUMMARY.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  BK_TREE_ANALYSIS.md  CHANGELOG.md  CLAUDE_AGENT_README.md  CLAUDE_CLOUD_SETUP.md  CLI_IMPROVEMENT_PLAN.md  CLI_UPGRADE_SUMMARY.md  CLOUD_DEV_SETUP.md  COMPREHENSIVE_BENCHMARK_RESULTS.md  CONTRIBUTING.md  CRITERION_BENCHMARK_RESULTS.txt  DEEP_INTEGRATION_PLAN.md  DEVELOPMENT.md  ENGINEERING_PLAN.md  ENGINEERING_PLAN_EXECUTION.md  EXECUTIVE_SUMMARY_PHASE1_IMPLEMENTATION.md  FINAL_OPTIMIZATIONS_SUMMARY.md  GENE_UMI_RUST_OPTIMIZATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_DELIVERABLES.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  INTEGRATION_TEST_RESULTS.md  INTEGRATION_TEST_SUMMARY.txt  KMER_INTEGRATION_PLAN.md  (+81 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml
.github/workflows/: publish.yml  rust_first_ci.yml  test.yml  tests.yml
benchmarks/: PERF_SUITE.md  README.md  __init__.py  baseline_results.json  benchmark_gene_counts.py  benchmark_kmer.py  benchmark_sheriff.py  compare_all_modes.py  compare_parallel.py  compare_rust_python.py  plot_perf.py  profile_memory.py  requirements.txt  run_perf_and_validation.py  run_perf_suite.py  rust_python_comparison.json
benchmarks/output/: all_modes_benchmark_results.json  parallel_benchmark_results.json
docs/: requirements.txt
docs/archive/: GITHUB_RELEASE_INSTRUCTIONS.md  PYPI_PUBLICATION_GUIDE.md
docs/source/: about.rst  changelog.rst  conf.py  index.rst  installation.rst  license.rst  outputs.rst  troubleshooting.rst  tutorial.rst  usage.rst
docs/source/_static/: custom.css
docs/source/api/: count_t7.rst  helpers.rst  modules.rst  rust.rst
example_data/: black_100x_peaks_by_qval.simple_repeats_50N.EXTRA.bed
examples/: demo_priority3.py  example-analysis.yaml  minimal-config.yaml  sheriff-config.yaml
scripts/: fetch_test_data.sh  publish_to_pypi.sh
sheriff/: __init__.py  __main__.py  bam_utils.py  count_t7.py  helpers.py  helpers_rust.py  logging_config.py  progress.py  results.py  rust_accelerated.py
sheriff-rs/: .gitignore  BUILD_PYTHON.md  Cargo.toml  PYTHON_BINDINGS.md  PYTHON_USAGE_EXAMPLES.py  README.md  build_python.sh  test_python_bindings.py
sheriff-rs/.cargo/: config.toml
sheriff-rs/benches/: bam_benchmark.rs  bam_benchmarks.rs  kmer_benchmarks.rs  umi_benchmarks.rs
sheriff-rs/examples/: kmer_demo.rs  python_demo.py  umi_demo.rs
sheriff-rs/src/: bam.rs  bam_filter.rs  edit_clustering.rs  gene.rs  gene_counts.rs  kmer.rs  lib.rs  main.rs  python.rs  simd.rs  test_substring.rs  umi.rs
sheriff-rs/tests/: integration_test.rs
sheriff/checkpoint/: __init__.py  format.py  manager.py
sheriff/cli/: __init__.py  config_cmd.py  run.py  validate.py
sheriff/config/: __init__.py  loader.py  schema.py
test_data/: CI_TESTING.md  README.md  barcodes.txt  barcodes_chr19.txt  blacklist_seqs.txt  ci_validation.py  create_mini_reference.sh  create_single_chrom_test.sh  download_reference.sh  edit_sites.txt  edit_sites_chr19.txt  expected_checksums.json  generate_checksums.py  run_validation.py  validate_chr19_test.py
