[package]
name = "sheriff-rs"
version = "0.1.0"
edition = "2021"
authors = ["Brad Balderson <bbalderson@salk.edu>"]
description = "High-performance Rust acceleration for Sheriff bioinformatics pipeline"
license = "BSD-3-Clause"

[dependencies]
rust-htslib = "0.46"        # BAM/SAM parsing (HTSlib wrapper)
anyhow = "1.0"              # Error handling
rayon = "1.8"               # Parallelism
ahash = "0.8"               # Fast hashing
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
petgraph = "0.6"            # Graph algorithms for UMI deduplication
bio = "1.6"                 # Sequence alignment (rust-bio)
regex = "1.10"              # Pattern matching for homopolymer correction

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "sheriff_rs"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust

[features]
default = []
python = ["pyo3"]

[[bin]]
name = "sheriff-rs"
path = "src/main.rs"

[[bench]]
name = "bam_benchmark"
harness = false

# Aggressive optimizations for maximum performance
[profile.release]
opt-level = 3              # Maximum optimizations
lto = "fat"               # Link-time optimization (slower build, faster runtime)
codegen-units = 1          # Better optimization (slower build, faster runtime)
strip = true               # Strip symbols
panic = "abort"            # Smaller binary, slightly faster
overflow-checks = false    # Remove overflow checks in release
