[package]
name = "sheriff-rs"
version = "0.1.0"
edition = "2021"
authors = ["Brad Balderson <bbalderson@salk.edu>"]
description = "High-performance Rust acceleration for Sheriff bioinformatics pipeline"
license = "BSD-3-Clause"

[dependencies]
rust-htslib = "0.46"        # BAM/SAM parsing (stays at 0.46 - newer versions need libclang)
anyhow = "1.0"              # Error handling
rayon = "1.11"              # Parallelism - UPDATED from 1.8
ahash = "0.8"               # Fast hashing (NOW USED!)
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }  # UPDATED from 0.20
petgraph = "0.6"            # Graph algorithms for UMI deduplication
bio = "2.0"                 # Sequence alignment (rust-bio) - UPDATED from 1.6
regex = "1.10"              # Pattern matching for homopolymer correction

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "sheriff_rs"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust

[features]
default = []
python = ["pyo3"]

[[bin]]
name = "sheriff-rs"
path = "src/main.rs"

# Removed test_substring binary (file doesn't exist)

[[bench]]
name = "bam_benchmark"
harness = false

# Aggressive optimizations for maximum performance
[profile.release]
opt-level = 3              # Maximum optimizations
lto = "fat"               # Link-time optimization (slower build, faster runtime)
codegen-units = 1          # Better optimization (slower build, faster runtime)
strip = true               # Strip symbols
panic = "abort"            # Smaller binary, slightly faster
overflow-checks = false    # Remove overflow checks in release
