[package]
name = "sheriff-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Sheriff k-mer and UMI processing"

[lib]
name = "sheriff_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustc-hash = "2.0"
rayon = "1.8"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
python = ["pyo3"]

[[bench]]
name = "kmer_benchmarks"
harness = false

[[bench]]
name = "umi_benchmarks"
harness = false

[[bench]]
name = "bam_benchmarks"
harness = false
